# aria

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  package.json  release_notes.md
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aria/assistant/data/: AppDatabase.kt
android/app/src/main/java/com/aria/assistant/data/dao/: AssistantConversationDao.kt  AssistantMessageDao.kt  CollectedDataDao.kt  WalletTransactionDao.kt
android/app/src/main/java/com/aria/assistant/data/entities/: Entities.kt
android/app/src/main/java/com/aria/assistant/di/: AppModule.kt
android/app/src/main/java/com/aria/assistant/network/: AriaApiService.kt  AuthInterceptor.kt  RetrofitHelper.kt
android/app/src/main/java/com/aria/assistant/ui/: MainActivity.kt
android/app/src/main/java/com/aria/assistant/utils/: FormatUtils.kt  LocationUtils.kt
android/app/src/main/res/menu/: bottom_nav_menu.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml
aria-token/: project_structure.md
aria-token/src/: error.rs  events.rs  pump_fun.rs  upgradable.rs
backend/: package.json
backend/src/: index.js
backend/src/config/: config.js
backend/src/models/: CollectedData.js  User.js
backend/src/services/: walletService.js
backend/src/utils/: logger.js
docs/: project_structure.md
keys/: .gitkeep
scripts/: deploy.js
src/: error.rs  events.rs  instruction.rs  lib.rs  metadata.rs  pump_fun.rs  security.rs  test.rs  token_economy.rs  upgradable.rs
(+9 files in other folders)
